monumenttours/style.css
h1 {
  text-align: center;
}

@media only screen and (min-width: 1000px) {
  .row {
      display: flex;
      align-items: center;
      flex-wrap: nowrap;
  }

  .reverse {
    flex-direction: row-reverse;
  }

  .row div {
      margin-right: 1rem;
  }

  .container img {
    min-width: 30rem;
}
}

.row {
  flex-wrap: wrap;
  justify-content: space-around;
}

.container img {
  max-width: 100%;
  margin-top: 1rem;
  height: auto;
  border-radius: 10px;
  box-shadow: rgb(36, 34, 34) 3px 3px 7px;
}

